Increase memory for docker process